umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hydrocarbons_buta-1,3-diene.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: hydrocarbons
atom_typing:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Cd
    atoms:
      - "{CH2v2}"
      - "{CHv3}"
      - "{CHv3}"
      - "{CH2v2}"
    bonds:
      - "="
      - "-"
      - "="
counts:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Cd
    atoms:
      - "{CH2v2}"
      - "{CHv3}"
      - "{CHv3}"
      - "{CH2v2}"
    bonds:
      - "="
      - "-"
      - "="
