umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hydrocarbons_butane.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: hydrocarbons
atom_typing:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Cd
    atoms:
      - "C#h3#v"
      - "C#h2#v2"
      - "C#h2#v2"
      - "C#h3#v"
    bonds:
      - "-"
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Cd
    atoms:
      - "C#h3#v"
      - "C#h2#v2"
      - "C#h2#v2"
      - "C#h3#v"
    bonds:
      - "-"
      - "-"
      - "-"
