umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hydrocarbons_cyclobutene.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: hydrocarbons
atom_typing:
  success: true
  summary:
    atom_count: 4
    bond_count: 4
    topology: Cr
    atoms:
      - "{CH1v3}"
      - "{CH1v3}"
      - "{CH2v2}"
      - "{CH2v2}"
    bonds:
      - "="
      - "-"
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 4
    bond_count: 4
    topology: Cr
    atoms:
      - "{CH1v3}"
      - "{CH1v3}"
      - "{CH2v2}"
      - "{CH2v2}"
    bonds:
      - "="
      - "-"
      - "-"
      - "-"
