umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hydrocarbons_cyclohexa-1,4-diene.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: hydrocarbons
atom_typing:
  success: true
  summary:
    atom_count: 6
    bond_count: 6
    topology: EoaW
    atoms:
      - "C#h#v3"
      - "C#h#v3"
      - "C#h2#v2"
      - "C#h2#v2"
      - "C#h#v3"
      - "C#h#v3"
    bonds:
      - "="
      - "-"
      - "-"
      - "-"
      - "-"
      - "="
counts:
  success: true
  summary:
    atom_count: 6
    bond_count: 6
    topology: EoaW
    atoms:
      - "C#h#v3"
      - "C#h#v3"
      - "C#h2#v2"
      - "C#h2#v2"
      - "C#h#v3"
      - "C#h#v3"
    bonds:
      - "="
      - "-"
      - "-"
      - "-"
      - "-"
      - "="
