umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hydrocarbons_cyclohexane.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "C#h2#v2" "1" "C#h2#v2" "2" "C#h2#v2" "3" "C#h2#v2" "4" "C#h2#v2" "5" "C#h2#v2"} :bonds [["0" "1" "1"] ["1" "2" "1"] ["2" "3" "1"] ["3" "4" "1"] ["4" "5" "1"] ["0" "5" "1"]] :charge 0 :spin "#u0 #s1"}} :counts {:success true :output {:atoms {"0" "C#h2#v2" "1" "C#h2#v2" "2" "C#h2#v2" "3" "C#h2#v2" "4" "C#h2#v2" "5" "C#h2#v2"} :bonds [["0" "1" "1"] ["1" "2" "1"] ["2" "3" "1"] ["3" "4" "1"] ["4" "5" "1"] ["0" "5" "1"]] :charge 0 :spin "#u0 #s1"}}}
